chore: 添加 .env.local 配置文件

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-# DeepSeek
-DEEPSEEK_API_KEY=your_api_key_here
+# DeepSeek（推荐：便宜好用）
+DEEPSEEK_API_KEY=sk-80aeff21dcb74ff4a3080591c786dd1b
 DEEPSEEK_MODEL=deepseek-chat
 DEEPSEEK_ENDPOINT=https://api.deepseek.com/v1/chat/completions
-
-# Ollama
-OLLAMA_ENDPOINT=http://localhost:11434
-OLLAMA_MODEL=qwen2.5:3b
 
 # 豆包 (字节跳动) - 推荐使用，性价比高
 DOUBAO_API_KEY=your_doubao_api_key_here
 DOUBAO_MODEL=doubao-1.5-pro-32k
 DOUBAO_ENDPOINT=https://ark.cn-beijing.volces.com/api/v3/chat/completions
 
-# Provider: deepseek | ollama | doubao
-LLM_PROVIDER=doubao
+# Ollama（本地模型）
+OLLAMA_ENDPOINT=http://localhost:11434
+OLLAMA_MODEL=qwen2.5:3b
+
+# LLM 提供商: deepseek | doubao | ollama
+LLM_PROVIDER=deepseek
 
 # Use dataset as word source
 USE_DATASET=1
