--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -158,14 +158,20 @@ jobs:
             echo "重启后端服务..."
             if command -v pm2 &> /dev/null; then
               cd $DEPLOY_DIR
+              # 停止现有进程（如果存在）
               if pm2 list | grep -q "learnenglish-api"; then
-                run_sudo pm2 restart learnenglish-api
-              else
-                run_sudo pm2 start server/index.js --name learnenglish-api
+                run_sudo pm2 stop learnenglish-api || true
+                run_sudo pm2 delete learnenglish-api || true
               fi
+              # 启动新进程
+              run_sudo pm2 start server/index.js --name learnenglish-api
               run_sudo pm2 save
+              echo "PM2 后端服务已启动"
             else
-              echo "警告: PM2 未安装，后端服务未启动"
+              echo "警告: PM2 未安装，尝试直接启动后端服务"
+              cd $DEPLOY_DIR
+              run_sudo nohup node server/index.js > /tmp/learnenglish-api.log 2>&1 &
+              echo "后端服务已直接启动"
             fi
 
             echo "重启 Nginx..."
