--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-sqlite3": "^9.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "easy-speech": "^2.4.0",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
