--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "easy-speech": "^2.4.0",
+    "edge-tts": "^1.0.1",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
