--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "easy-speech": "^2.4.0",
     "edge-tts": "^1.0.1",
     "express": "^4.19.2",
+    "node-gtts": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "undici": "^6.19.2",
